--- a/page1.html
+++ b/page1.html
@@ -36,7 +36,7 @@
     </figure>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-section content5 cid-s4lwBNSf8F" id="content5-1h">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-section content5 cid-s4lwBNSf8F" id="content5-1h">
 
     
 
@@ -90,7 +90,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/solution-2-395x358.jpeg" alt="Mobirise" title="">
+                        <img src="assets/images/small-fish-alternativ-statt-fischfarmbild-676x507.jpeg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5">Our solution</h4>
@@ -121,7 +121,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Zb8q7KLb05sqy7JV2Y41yGRr603tb+bT2rnQAiKRwkbSdibN/yFhFOLg77oIPdM7Q4Al74vD3HSAZ0IvwUrWBM2wn3SFdyCA1UUTcDKUduSBuR2Wq+J83maCtqkotBxC">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pRGl2yR/vooV/MnobBsflEu/z4VGteNCDY6F9EIWFJTnx6sLbLKkCbdnIoaNJrGIz/MRfcaIXdx8gvObs3oVEvSnDpYG0RR+cmUMw03KLpeV1XYipT1yybNaarwMb/Kk">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Vielen Dank! Ihre Nachricht wurde verschickt!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
